objects/modigie__Process_Builder_Switch__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>modigie__Configuration_User_Id__c</fullName>
        <description>This field is used to store the user id which had authorized modigie account with salesforce.</description>
        <label>Configuration User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Contact_Alt_LinkedIn_Url_Field_Name__c</fullName>
        <description>This field is used to store the API name of Contact&apos;s Linkedin Url field in your organization.</description>
        <label>Contact Alt LinkedIn Url Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Contact_Assigned_to_New_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Assigned to New Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Data_Maintenance_Get_LinkedIn_URL_A__c</fullName>
        <label>Data Maintenance Get LinkedIn URL A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Data_Maintenance_Get_LinkedIn_URL_Limit__c</fullName>
        <label>Data Maintenance Get LinkedIn URL Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Data_Maintenance_Get_LinkedIn_URL_Usage__c</fullName>
        <label>Data Maintenance Get LinkedIn URL Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Data_Maintenance_Get_LinkedIn_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Maintenance Get LinkedIn URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Data_Maintenance_Get_Modigie_A__c</fullName>
        <label>Data Maintenance Get Modigie A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Data_Maintenance_Get_Modigie_Limit__c</fullName>
        <label>Data Maintenance Get Modigie Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Data_Maintenance_Get_Modigie_Usage__c</fullName>
        <label>Data Maintenance Get Modigie Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Data_Maintenance_Get_Modigie__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Maintenance Get Modigie</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Dynamic_Contact_Custom_Logic__c</fullName>
        <label>Dynamic Contact Custom Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Dynamic_Contact_Logic_Type__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Dynamic Contact Logic Type</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Dynamic_Criteria_Automation_A__c</fullName>
        <label>Dynamic Criteria Automation A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Dynamic_Criteria_Automation_Limit__c</fullName>
        <label>Dynamic Criteria Automation Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Dynamic_Criteria_Automation_Usage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dynamic Criteria Automation Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Dynamic_Criteria_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dynamic Criteria Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Dynamic_Lead_Custom_Logic__c</fullName>
        <label>Dynamic Lead Custom Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Dynamic_Lead_Logic_Type__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Allowed Value AND, OR, CUSTOM</inlineHelpText>
        <label>Dynamic Lead Logic Type</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Modigie_Campaign_Invocable_Limits_A__c</fullName>
        <label>Get Modigie Campaign Invocable Lmt Admin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Modigie_Campaign_Invocable_Limits__c</fullName>
        <label>Get Modigie Campaign Invocable Limits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Modigie_Campaign_Invocable_Usage__c</fullName>
        <label>Get Modigie Campaign Invocable Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Modigie_Invocable_Limit_A__c</fullName>
        <label>Get Modigie Invocable Limit Admin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Modigie_Invocable_Limit__c</fullName>
        <label>Get Modigie Invocable Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Modigie_Invocable_Usage__c</fullName>
        <label>Get Modigie Invocable Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Insights_Campaign_Limits_A__c</fullName>
        <label>Get Phone Insights Campaign Limits A</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Insights_Campaign_Limits__c</fullName>
        <label>Get Phone Insights Campaign Limits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Insights_Campaign_Usage__c</fullName>
        <label>Get Phone Insights Campaign  Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Insights_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Phone Insights Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Insights_Phone_Number_Selected__c</fullName>
        <label>Get Phone Insights Phone Number Selected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Get_Phone_Insights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Phone Insights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Get_linkedin_campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get linkedin campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Get_linkedin_url__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get linkedin url</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Hot_Lead_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot Lead Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Is_Active_Contact_Alt_LinkedIn_Url__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active Contact Alt LinkedIn Url</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Is_Active_Lead_Alt_LinkedIn_Url__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active Lead Alt LinkedIn Url</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Alt_LinkedIn_Url_Field_Name__c</fullName>
        <description>This field is used to store the API name of Lead&apos;s Linkedin Url field in your organization.</description>
        <label>Lead Alt LinkedIn Url Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_From_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead From Web</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Get_LinkedIn_URL_A__c</fullName>
        <label>Lead Status Working Get LinkedIn URL A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Get_LinkedIn_URL_Lim__c</fullName>
        <label>Lead Status Working Get LinkedIn URL Lim</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Get_LinkedIn_URL_Usa__c</fullName>
        <label>Lead Status Working Get LinkedIn URL Usa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Get_LinkedIn_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Status Working Get LinkedIn URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Get_Modigie_A__c</fullName>
        <label>Lead Status Working Get Modigie A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Get_Modigie_Limit__c</fullName>
        <label>Lead Status Working Get Modigie Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Get_Modigie_Usage__c</fullName>
        <label>Lead Status Working Get Modigie Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Get_Modigie__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Status Working Get Modigie</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Get_Phone_Insights_A__c</fullName>
        <label>Lead Status Working Get Phone Insights A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Get_Phone_Insights_L__c</fullName>
        <label>Lead Status Working Get Phone Insights L</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Get_Phone_Insights_U__c</fullName>
        <label>Lead Status Working Get Phone Insights U</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Get_Phone_Insights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Status Working Get Phone Insights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Verify_Employer_A__c</fullName>
        <label>Lead Status Working Verify Employer A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Verify_Employer_Limi__c</fullName>
        <label>Lead Status Working Verify Employer Limi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Verify_Employer_Usag__c</fullName>
        <label>Lead Status Working Verify Employer Usag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Lead_Status_Working_Verify_Employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Status Working Verify Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Limit_User_for_Modigie_Ad_hoc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to specify whether to have modigie users to make limited callout or not.</description>
        <label>Limit User for Modigie Ad hoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Limits_No_Limits_Selection__c</fullName>
        <label>Limits No Limits Selection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__LinkedIn_Url_Campaign_Usage__c</fullName>
        <label>LinkedIn Url Campaign Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__LinkedIn_Url_Invocable_Limits_A__c</fullName>
        <label>LinkedIn Url Invocable Limits Admin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__LinkedIn_Url_Invocable_Limits__c</fullName>
        <label>LinkedIn Url Invocable Limits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__LinkedIn_Url_Invocable_Usage__c</fullName>
        <label>LinkedIn Url Invocable Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Linkedin_Url_Campaign_Limits_A__c</fullName>
        <label>Linkedin Url Campaign Limits Admin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Linkedin_Url_Campaign_Limits__c</fullName>
        <label>Linkedin Url Campaign Limits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Maintain_Queue_Sales_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintain Queue Sales Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Phone_Insights_Invocable_Limit_A__c</fullName>
        <label>Modigie Phone Insights Invocable Lmt Adm</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Phone_Insights_Invocable_Limit__c</fullName>
        <label>Modigie Phone Insights Invocable Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Phone_Insights_Invocable_Usage__c</fullName>
        <label>Modigie Phone Insights Invocable Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__No_Mobile_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Mobile Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__No_Mobile_Information_campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Mobile Information Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__No_Phone_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Phone Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Opp_Contact_Enrichment_Invocable_Limit_A__c</fullName>
        <label>Opp Contact Enrichment Invocable Lmt Adm</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Opp_Contact_Enrichment_Invocable_Limit__c</fullName>
        <label>Opp Contact Enrichment Invocable Limits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Opp_Contact_Enrichment_Invocable_Usage__c</fullName>
        <label>Opp Contact Enrichment Invocable Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Opportunity_Contact_Enrichment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Contact Enrichment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Opportunity_Contact_Get_LinkedIn_A__c</fullName>
        <label>Opportunity Contact Get LinkedIn A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Opportunity_Contact_Get_LinkedIn_Limit__c</fullName>
        <label>Opportunity Contact Get LinkedIn Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Opportunity_Contact_Get_LinkedIn_Usage__c</fullName>
        <label>Opportunity Contact Get LinkedIn Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Opportunity_Contact_Get_LinkedIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Contact Get LinkedIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Opportunity_Contact_Get_Modigie_A__c</fullName>
        <label>Opportunity Contact Get Modigie A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Opportunity_Contact_Get_Modigie_Limit__c</fullName>
        <label>Opportunity Contact Get Modigie Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Opportunity_Contact_Get_Modigie_Usage__c</fullName>
        <label>Opportunity Contact Get Modigie Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Opportunity_Contact_Get_Modigie__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Contact Get Modigie</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Opportunity_Contact_Get_Phone_Insights_A__c</fullName>
        <label>Opportunity Contact Get Phone Insights A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Opportunity_Contact_Get_Phone_Insights_L__c</fullName>
        <label>Opportunity Contact Get Phone Insights L</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Opportunity_Contact_Get_Phone_Insights_U__c</fullName>
        <label>Opportunity Contact Get Phone Insights U</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Opportunity_Contact_Get_Phone_Insights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Contact Get Phone Insights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Insights_Data_Maintenance_Limits_A__c</fullName>
        <label>Phone Insights Data Maintenance Lmt Adm</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Insights_Data_Maintenance_Limits__c</fullName>
        <label>Phone Insights Data Maintenance Limits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Insights_Data_Maintenance_Usage__c</fullName>
        <label>Phone Insights Data Maintenance Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Phone_Insights_Data_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to toggle the Phone Insights (Data Maintenance) schedule class.</description>
        <label>Phone Insights Data Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Selected_Lead_Status__c</fullName>
        <label>Selected Lead Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Selected_Opportunity_Stages__c</fullName>
        <label>Selected Opportunity Stages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Selected_time_interval_phone_insights__c</fullName>
        <label>Selected time interval phone insights</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Selected_time_interval_validate_employer__c</fullName>
        <label>Selected time interval validate employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Get_LinkedIn_URL_A__c</fullName>
        <label>Unreachable Get LinkedIn URL A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Get_LinkedIn_URL_Limit__c</fullName>
        <label>Unreachable Get LinkedIn URL Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Get_LinkedIn_URL_Usage__c</fullName>
        <label>Unreachable Get LinkedIn URL Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Get_LinkedIn_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unreachable Get LinkedIn URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Get_Modigie_A__c</fullName>
        <label>Unreachable Get Modigie A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Get_Modigie_Limit__c</fullName>
        <label>Unreachable Get Modigie Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Get_Modigie_Usage__c</fullName>
        <label>Unreachable Get Modigie Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Get_Modigie__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unreachable Get Modigie</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Get_Phone_Insights_A__c</fullName>
        <label>Unreachable Get Phone Insights A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Get_Phone_Insights_Limit__c</fullName>
        <label>Unreachable Get Phone Insights Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Get_Phone_Insights_Usage__c</fullName>
        <label>Unreachable Get Phone Insights Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Get_Phone_Insights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unreachable Get Phone Insights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Verify_Employer_A__c</fullName>
        <label>Unreachable Verify Employer A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Verify_Employer_Limit__c</fullName>
        <label>Unreachable Verify Employer Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Verify_Employer_Usage__c</fullName>
        <label>Unreachable Verify Employer Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unreachable_Verify_Employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unreachable Verify Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Get_LinkedIn_URL_A__c</fullName>
        <label>Unresponsive Lead Get LinkedIn URL A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Get_LinkedIn_URL_Limit__c</fullName>
        <label>Unresponsive Lead Get LinkedIn URL Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Get_LinkedIn_URL_Usage__c</fullName>
        <label>Unresponsive Lead Get LinkedIn URL Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Get_LinkedIn_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unresponsive Lead Get LinkedIn URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Get_Modigie_A__c</fullName>
        <label>Unresponsive Lead Get Modigie A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Get_Modigie_Limit__c</fullName>
        <label>Unresponsive Lead Get Modigie Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Get_Modigie_Usage__c</fullName>
        <label>Unresponsive Lead Get Modigie Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Get_Modigie__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unresponsive Lead Get Modigie</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Get_Phone_Insights_A__c</fullName>
        <label>Unresponsive Lead Get Phone Insights A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Get_Phone_Insights_Lim__c</fullName>
        <label>Unresponsive Lead Get Phone Insights Lim</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Get_Phone_Insights_Usa__c</fullName>
        <label>Unresponsive Lead Get Phone Insights Usa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Get_Phone_Insights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unresponsive Lead Get Phone Insights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Invocable_Limits_A__c</fullName>
        <label>Unresponsive Lead Invocable Limits Admin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Invocable_Limits__c</fullName>
        <label>Unresponsive Lead Invocable Limits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Invocable_Usage__c</fullName>
        <label>Unresponsive Lead Invocable Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Selected_Status__c</fullName>
        <label>Unresponsive Lead Selected Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Toggle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to toggle the schedule class which runs everyday to check the unresponsive leads.</description>
        <label>Unresponsive Lead Toggle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Verify_Employer_A__c</fullName>
        <label>Unresponsive Lead Verify Employer A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Verify_Employer_Limit__c</fullName>
        <label>Unresponsive Lead Verify Employer Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Verify_Employer_Usage__c</fullName>
        <label>Unresponsive Lead Verify Employer Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Unresponsive_Lead_Verify_Employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unresponsive Lead Verify Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Validate_Employer_Data_Maintenance_Lmt_A__c</fullName>
        <label>Validate Emp Data Maintenance Limit Adm</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Validate_Employer_Data_Maintenance_Lmt__c</fullName>
        <label>Validate Emp Data Maintenance Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Validate_Employer_Data_Maintenance_Usage__c</fullName>
        <label>Validate Employer Data Maintenance Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Validate_Employer_Data_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to toggle the verify employer (Data Maintenance) schedule class.</description>
        <label>Validate Employer Data Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Validate_Employer_Invocable_Limit_A__c</fullName>
        <label>Validate Employer Invocable Limit Admin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Validate_Employer_Invocable_Limit__c</fullName>
        <label>Validate Employer Invocable Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Validate_Employer_Invocable_Usage__c</fullName>
        <label>Validate Employer Invocable Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Validate_Employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Validate_Employer_campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Employer Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Validate_employer_campaign_Limits_A__c</fullName>
        <label>Validate employer campaign Limits Admin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Validate_employer_campaign_Limits__c</fullName>
        <label>Validate employer campaign Limits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Validate_employer_campaign_Usage__c</fullName>
        <label>Validate employer campaign Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Process Builder Switch</label>
</CustomObject>